# Shatranj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.cpp  helper.sh  main.cpp
include/: ChessBoard.h  ChessEngine.h  ChessPiece.h  enum.h  visualize.h
src/: ChessBoard.cpp  ChessEngine.cpp  ChessPiece.cpp  visualize.cpp
test/: ChessEngine.cpp  MoveGeneration.cpp
